@@ -605,15 +605,8 @@ subprojects {
             } else {
                     forkEvery(1)
                     jvmArgs += [
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED",
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED",
+                            "--illegal-access=warn",
                             "--add-opens", "jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED",
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED",
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED",
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED",
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED",
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED",
-                            "--add-opens", "jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED",
                     ]
             }
 
